Add drag + scrolling example to the index

--- a/index.html
+++ b/index.html
@@ -111,6 +111,98 @@ dragula([document.getElementById(left), document.getElementById(right)], {
     </pre>
   </div>
   <div class='parent'>
+    <label for='hy'>Need to see more while dragging? Sure we'll scroll for you.</label>
+    <div class='wrap'>
+      <div class="container scrollable">
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <div>Integer luctus magna elementum nibh vestibulum, ut commodo justo vulputate.</div>
+        <div>Praesent in ex tempor, maximus arcu et, fermentum magna.</div>
+        <div>Suspendisse a urna et tellus commodo condimentum.</div>
+        <div>Suspendisse convallis nulla at sapien hendrerit dignissim.</div>
+        <div>Suspendisse ut ex in sem rutrum volutpat.</div>
+        <div>Nullam quis mauris et leo pretium tincidunt.</div>
+        <div>Sed sit amet mauris lobortis, auctor ligula quis, convallis dui.</div>
+        <div>Nulla id neque nec odio accumsan eleifend.</div>
+        <div>Donec eget quam in neque sollicitudin molestie.</div>
+        <div>Nunc ut est sed nisi eleifend commodo.</div>
+        <div>Nulla sollicitudin odio eu sollicitudin rhoncus.</div>
+        <div>Quisque ac tortor placerat, tempus turpis sit amet, mollis risus.</div>
+        <div>Morbi at arcu euismod, facilisis nisl condimentum, ultrices leo.</div>
+        <div>Vestibulum pulvinar quam id nisl dictum, quis ultricies dui laoreet.</div>
+        <div>Nunc sed nisl eu nisl accumsan tincidunt non at nibh.</div>
+        <div>Nullam bibendum leo vitae sollicitudin hendrerit.</div>
+        <div>Suspendisse imperdiet odio ut diam fermentum iaculis.</div>
+        <div>Vestibulum elementum sapien a purus facilisis egestas.</div>
+        <div>Pellentesque ac nulla quis ex congue pellentesque eu eleifend lacus.</div>
+        <div>Nunc rutrum lectus vitae ipsum facilisis, et tincidunt nisi dapibus.</div>
+        <div>Phasellus vehicula nisl quis felis rutrum, vel dictum est rutrum.</div>
+        <div>Nunc in orci vitae nunc hendrerit ultrices.</div>
+        <div>Sed scelerisque dui vel sapien congue, at vestibulum orci pretium.</div>
+        <div>Nulla a nisl vel massa rhoncus gravida molestie id leo.</div>
+        <div>Integer a dui iaculis nisl tincidunt convallis.</div>
+        <div>In quis purus eu tellus ultricies egestas ut in quam.</div>
+        <div>Integer fringilla metus nec lorem mattis, vel gravida mauris vulputate.</div>
+        <div>Nullam scelerisque sapien ac dui euismod vestibulum.</div>
+        <div>Aliquam ac erat vel dolor gravida viverra.</div>
+        <div>Sed vitae ex accumsan, venenatis dolor quis, molestie mi.</div>
+        <div>Duis quis libero sit amet mauris rutrum porta a at augue.</div>
+        <div>Cras vitae magna nec dui vestibulum pharetra.</div>
+        <div>In vitae libero ac odio consectetur lobortis.</div>
+        <div>Fusce congue ante nec pretium consequat.</div>
+        <div>Aliquam efficitur nulla ac risus scelerisque, id viverra lacus tempus.</div>
+        <div>Mauris ornare eros at lacus efficitur posuere quis et ligula.</div>
+        <div>In in ipsum id justo vulputate lobortis vel vitae ipsum.</div>
+        <div>Proin at ipsum bibendum, finibus mi ac, accumsan felis.</div>
+        <div>Aenean malesuada massa id tempus mollis.</div>
+        <div>Mauris pellentesque dolor vitae urna condimentum, sed sodales elit commodo.</div>
+        <div>Sed sollicitudin elit et tellus tincidunt maximus.</div>
+        <div>Nunc eleifend neque at lorem dapibus mollis.</div>
+        <div>Aliquam ullamcorper massa eu aliquam viverra.</div>
+        <div>Vestibulum vitae quam id enim consectetur facilisis.</div>
+        <div>Curabitur viverra justo vel eros tempor ornare.</div>
+        <div>Duis gravida augue sit amet dictum cursus.</div>
+        <div>Mauris ut massa convallis, hendrerit massa ut, maximus nulla.</div>
+        <div>Aenean vitae leo sit amet felis faucibus porta ut ut nibh.</div>
+        <div>Phasellus ac massa sit amet purus vehicula tempus.</div>
+        <div>Vestibulum pharetra eros id odio pellentesque, ac aliquet risus lobortis.</div>
+        <div>Maecenas gravida purus non interdum dignissim.</div>
+        <div>Mauris molestie mi congue nibh viverra convallis.</div>
+        <div>Vivamus eget sem nec lorem sagittis mattis.</div>
+        <div>Donec pellentesque turpis et magna pretium hendrerit.</div>
+        <div>Morbi rhoncus quam quis ligula pellentesque tincidunt.</div>
+        <div>Curabitur pretium erat sed orci posuere rhoncus.</div>
+        <div>Donec congue sapien nec convallis maximus.</div>
+        <div>Vivamus consectetur justo et consequat tempor.</div>
+        <div>Mauris scelerisque justo vitae ligula pretium, non auctor justo cursus.</div>
+        <div>Mauris congue nunc porta tortor sagittis dapibus.</div>
+        <div>Morbi hendrerit mauris vitae imperdiet condimentum.</div>
+        <div>Nulla volutpat tellus sit amet sem vehicula viverra.</div>
+        <div>Nullam aliquet dui nec pharetra gravida.</div>
+      </div>
+    </div>
+
+    <div class="wrap">
+      <div class="scrollable scrollable--horizontal">
+        <div class="container scroll">
+          <div>Morbi rhoncus quam quis ligula pellentesque tincidunt.</div>
+          <div>Curabitur pretium erat sed orci posuere rhoncus.</div>
+          <div>Donec congue sapien nec convallis maximus.</div>
+          <div>Vivamus consectetur justo et consequat tempor.</div>
+          <div>Mauris scelerisque justo vitae ligula pretium, non auctor justo cursus.</div>
+          <div>Mauris congue nunc porta tortor sagittis dapibus.</div>
+          <div>Morbi hendrerit mauris vitae imperdiet condimentum.</div>
+          <div>Nulla volutpat tellus sit amet sem vehicula viverra.</div>
+          <div>Nullam aliquet dui nec pharetra gravida.</div>
+        </div>
+      </div>
+    </div>
+    <pre>
+      <code>
+dragula([document.querySelector('.scrollable')]);
+      </code>
+    </pre>
+  </div>
+  <div class='parent'>
     <label for='hy'>Copying stuff is common too, so we made it easy for you.</label>
     <div class='wrapper'>
       <div id='left-copy' class='container'>
